package/lib/src/bindings.dart


  /// Copies a buffer into owned bytes.
  ///
  /// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
  /// @param data   Pointer to the buffer data.
  /// @param len    Length of the buffer in bytes.
  /// @return 0 on success, negative on failure.
  int zd_bytes_copy_from_buf(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zd_bytes_copy_from_buf(bytes, data, len);
  }

  late final _zd_bytes_copy_from_bufPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('zd_bytes_copy_from_buf');
  late final _zd_bytes_copy_from_buf = _zd_bytes_copy_from_bufPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Converts loaned bytes to an owned string.
  ///
  /// @param bytes  Const pointer to a loaned bytes reference.
  /// @param out    Pointer to an uninitialized z_owned_string_t to receive the result.
  /// @return 0 on success, negative on failure.
  int zd_bytes_to_string(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ffi.Opaque> out,
  ) {
    return _zd_bytes_to_string(bytes, out);
  }

  late final _zd_bytes_to_stringPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_bytes_to_string');
  late final _zd_bytes_to_string = _zd_bytes_to_stringPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Obtains a const loaned reference to the bytes.
  ///
  /// @param bytes  Pointer to a valid z_owned_bytes_t.
  /// @return Const pointer to the loaned bytes.
  ffi.Pointer<ffi.Opaque> zd_bytes_loan(ffi.Pointer<ffi.Opaque> bytes) {
    return _zd_bytes_loan(bytes);
  }

  late final _zd_bytes_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_bytes_loan');
  late final _zd_bytes_loan = _zd_bytes_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the total number of bytes in the payload.
  ///
  /// @param bytes  Pointer to a z_owned_bytes_t (cast to uint8_t*).
  /// @return Total number of bytes.
  int zd_bytes_len(ffi.Pointer<ffi.Uint8> bytes) {
    return _zd_bytes_len(bytes);
  }

  late final _zd_bytes_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Uint8>)>>(
        'zd_bytes_len',
      );
  late final _zd_bytes_len = _zd_bytes_lenPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>)>();

  /// Reads the content of owned bytes into a caller-provided buffer.
  ///
  /// Uses z_bytes_reader to copy up to `capacity` bytes into `out`.
  ///
  /// @param bytes     Pointer to a z_owned_bytes_t (cast to uint8_t*).
  /// @param out       Pointer to a buffer to receive the data.
  /// @param capacity  Maximum number of bytes to read.
  /// @return 0 on success.
  int zd_bytes_to_buf(
    ffi.Pointer<ffi.Uint8> bytes,
    ffi.Pointer<ffi.Uint8> out,
    int capacity,
  ) {
    return _zd_bytes_to_buf(bytes, out, capacity);
  }

  late final _zd_bytes_to_bufPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int32,
          )
        >
      >('zd_bytes_to_buf');
  late final _zd_bytes_to_buf = _zd_bytes_to_bufPtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>, int)
      >();

  /// Drops (frees) owned bytes.
  ///
  /// After this call the owned bytes are in gravestone state.
  /// A second drop is a safe no-op.
  ///
  /// @param bytes  Pointer to a z_owned_bytes_t to drop.
  void zd_bytes_drop(ffi.Pointer<ffi.Opaque> bytes) {
    return _zd_bytes_drop(bytes);
  }

  late final _zd_bytes_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_bytes_drop',
      );
  late final _zd_bytes_drop = _zd_bytes_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Clones owned bytes into a pre-allocated destination.
  ///
  /// Loans the source, then calls z_bytes_clone() to produce an independent
  /// copy that shares the underlying reference-counted data.
  ///
  /// @param dst  Pointer to an uninitialized z_owned_bytes_t (cast to uint8_t*).
  /// @param src  Pointer to a valid z_owned_bytes_t (cast to uint8_t*).
  /// @return 0 on success.
  int zd_bytes_clone(ffi.Pointer<ffi.Uint8> dst, ffi.Pointer<ffi.Uint8> src) {
    return _zd_bytes_clone(dst, src);
  }

  late final _zd_bytes_clonePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>)
        >
      >('zd_bytes_clone');
  late final _zd_bytes_clone = _zd_bytes_clonePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>)
      >();

  /// Returns the size of z_owned_string_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_string_sizeof() {
    return _zd_string_sizeof();
  }

  late final _zd_string_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_string_sizeof');
  late final _zd_string_sizeof = _zd_string_sizeofPtr
      .asFunction<int Function()>();

  /// Obtains a const loaned reference to the owned string.
  ///
  /// @param str  Pointer to a valid z_owned_string_t.
  /// @return Const pointer to the loaned string.
  ffi.Pointer<ffi.Opaque> zd_string_loan(ffi.Pointer<ffi.Opaque> str) {
    return _zd_string_loan(str);
  }

  late final _zd_string_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_string_loan');
  late final _zd_string_loan = _zd_string_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns a pointer to the data of a loaned string.
  ///
  /// The returned pointer is NOT guaranteed to be null-terminated.
  ///
  /// @param str  Const pointer to a loaned string.
  /// @return Pointer to the string data.
  ffi.Pointer<ffi.Char> zd_string_data(ffi.Pointer<ffi.Opaque> str) {
    return _zd_string_data(str);
  }

  late final _zd_string_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_string_data');
  late final _zd_string_data = _zd_string_dataPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the length of a loaned string (in bytes, NOT including any terminator).
  ///
  /// @param str  Const pointer to a loaned string.
  /// @return Length of the string data in bytes.
  int zd_string_len(ffi.Pointer<ffi.Opaque> str) {
    return _zd_string_len(str);
  }

  late final _zd_string_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_string_len',
      );
  late final _zd_string_len = _zd_string_lenPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Drops (frees) an owned string.
  ///
  /// After this call the owned string is in gravestone state.
  /// A second drop is a safe no-op.
  ///
  /// @param str  Pointer to a z_owned_string_t to drop.
  void zd_string_drop(ffi.Pointer<ffi.Opaque> str) {
    return _zd_string_drop(str);
  }

  late final _zd_string_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_string_drop',
      );
  late final _zd_string_drop = _zd_string_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of z_view_string_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_view_string_sizeof() {
    return _zd_view_string_sizeof();
  }

  late final _zd_view_string_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_view_string_sizeof');
  late final _zd_view_string_sizeof = _zd_view_string_sizeofPtr
      .asFunction<int Function()>();

  /// Returns a pointer to the data of a view string.
  ///
  /// Internally loans the view string and calls z_string_data on the loaned ref.
  /// The returned pointer is NOT guaranteed to be null-terminated.
  ///
  /// @param str  Pointer to a valid z_view_string_t.
  /// @return Pointer to the string data.
  ffi.Pointer<ffi.Char> zd_view_string_data(ffi.Pointer<ffi.Opaque> str) {
    return _zd_view_string_data(str);
  }

  late final _zd_view_string_dataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_view_string_data');
  late final _zd_view_string_data = _zd_view_string_dataPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the length of a view string (in bytes, NOT including any terminator).
  ///
  /// Internally loans the view string and calls z_string_len on the loaned ref.
  ///
  /// @param str  Pointer to a valid z_view_string_t.
  /// @return Length of the string data in bytes.
  int zd_view_string_len(ffi.Pointer<ffi.Opaque> str) {
    return _zd_view_string_len(str);
  }

  late final _zd_view_string_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_view_string_len',
      );
  late final _zd_view_string_len = _zd_view_string_lenPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Publishes data on the given key expression.
  ///
  /// The payload is consumed (moved) by this call -- the caller must not
  /// use the owned bytes after calling zd_put.
  ///
  /// @param session  Const pointer to a loaned session.
  /// @param keyexpr  Const pointer to a loaned key expression.
  /// @param payload  Pointer to an owned bytes (consumed via z_bytes_move).
  /// @return 0 on success, negative on failure.
  int zd_put(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> keyexpr,
    ffi.Pointer<ffi.Opaque> payload,
  ) {
    return _zd_put(session, keyexpr, payload);
  }

  late final _zd_putPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_put');
  late final _zd_put = _zd_putPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
        )
      >();

  /// Deletes a resource on the given key expression.
  ///
  /// @param session  Const pointer to a loaned session.
  /// @param keyexpr  Const pointer to a loaned key expression.
  /// @return 0 on success, negative on failure.
  int zd_delete(
    ffi.Pointer<ffi.Opaque> session,
    ffi.Pointer<ffi.Opaque> keyexpr,
  ) {
    return _zd_delete(session, keyexpr);
  }

  late final _zd_deletePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
        >
      >('zd_delete');
  late final _zd_delete = _zd_deletePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Opaque>)
      >();

  /// Returns the size of z_owned_subscriber_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_subscriber_sizeof() {
    return _zd_subscriber_sizeof();
  }

  late final _zd_subscriber_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_subscriber_sizeof');
  late final _zd_subscriber_sizeof = _zd_subscriber_sizeofPtr
      .asFunction<int Function()>();
